--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: Protoconf
 
 # Name of the author
-author: Amit Merchant
+author: Lior Tubi
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: Codify configuration, instant delivery
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /reverie/images/reverie.png
@@ -21,15 +21,15 @@ avatar: /reverie/images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
+  email:
   facebook:
   flickr:
-  github: amitmerchant1990
+  github: lior2b
   instagram:
   linkedin: 
   pinterest:
   rss: rss
-  twitter: amit_merchant
+  twitter:
   stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -45,14 +45,14 @@ google_analytics:
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.amitmerchant.com/reverie
-enforce_ssl: https://www.amitmerchant.com/reverie
+url: http://lior2b.github.io/pc/
+enforce_ssl: https://lior2b.github.io/pc/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+baseurl: "/pc"
 
 #
 # !! You don't need to change any of the configuration flags below !!
