--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Lior Tubi
 description: Codify configuration, instant delivery
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /pc/images/protoconf.png
+avatar: /pc/images/protoconf.svg
 
 #
 # Flags below are optional
