--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: Codify configuration, instant delivery
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /pc/images/protoconf.svg
 
-favicon: /pc/favicon.ico
+favicon: /pc/images/favicon.ico
 
 #
 # Flags below are optional
